--- a/circle.yml
+++ b/circle.yml
@@ -3,7 +3,7 @@ machine:
     version: oraclejdk8
   timezone: UTC
   environment:
-    SBT_OPTS:
+    SBT_OPTS: -Djava.util.Arrays.useLegacyMergeSort=true
 dependencies:
   cache_directories:
     - "~/.sbt"
