Customizeable test conf

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -2,4 +2,7 @@ pusher {
   appId="app"
   key="key"
   secret="secret"
+  appId=${?PUSHER_APP_ID}
+  key=${?PUHSER_API_KEY}
+  secret=${?PUSHER_API_SECRET}
 }
