--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,9 @@ jdk:
 
 script:
   - sbt ++$TRAVIS_SCALA_VERSION clean coverage test -Djava.util.Arrays.useLegacyMergeSort=true
+
+before_install:
+  - pip install --user codecov
+
+after_success:
+  - codecov
