Support batch trigger

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -5,4 +5,6 @@ pusher {
   appId=${?PUSHER_APP_ID}
   key=${?PUHSER_API_KEY}
   secret=${?PUSHER_API_SECRET}
+  batchTrigger = false
+  batchInterval = 1000
 }
