Fix test execution settings

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,7 @@ jdk:
   - oraclejdk8
 
 script:
-  - sbt ++$TRAVIS_SCALA_VERSION clean
-  - sbt ++$TRAVIS_SCALA_VERSION coverage
-  - sbt ++$TRAVIS_SCALA_VERSION test -Djava.util.Arrays.useLegacyMergeSort=true
+  - sbt ++$TRAVIS_SCALA_VERSION clean ++$TRAVIS_SCALA_VERSION coverage ++$TRAVIS_SCALA_VERSION test
 
 before_install:
   - pip install --user codecov
