--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,8 @@ jdk:
   - oraclejdk8
 
 script:
-  - sbt ++$TRAVIS_SCALA_VERSION clean ++$TRAVIS_SCALA_VERSION coverage ++$TRAVIS_SCALA_VERSION test
-
-before_install:
-  - pip install --user codecov
+  - "[ \"$TRAVIS_SCALA_VERSION\" != \"2.10.6\" ] || sbt ++$TRAVIS_SCALA_VERSION clean test"
+  - "[ \"$TRAVIS_SCALA_VERSION\" == \"2.10.6\" ] || sbt ++$TRAVIS_SCALA_VERSION clean coverage test"
 
 after_success:
-  - codecov
+  - pip install --user codecov && codecov
