Enables to use named dispatcher.

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -7,4 +7,14 @@ pusher {
   secret=${?PUSHER_API_SECRET}
   batchTrigger = false
   batchInterval = 1000
+  dispatcher {
+    type = Dispatcher
+    executor = "fork-join-executor"
+    fork-join-executor {
+      parallelism-min = 2
+      parallelism-max = 4
+      parallelism-factor = 2.0
+    }
+  }
 }
+
